--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -5,6 +5,8 @@ body {
 
 h1 {
     color: white;
+    text-align: center;
+
 }
 
 section {
@@ -113,5 +115,14 @@ footer {
   width: 100%;
   padding: 100px 0 10px 0;
   font-size: .75em;
-  color: #ad2929;
+  color: #ffffff;
 }
+
+a {
+    color: white;
+  }
+
+  a:visited {
+    color: white;
+  }
+  
